# shadertoy-connector

./: .clang_complete  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  Shadertoy.m  buildpackage.sh  buildpackages.sh
Sources/: context.cpp  context.hpp  host.cpp  host.hpp  local.cpp  local.hpp  remote.cpp  remote.hpp  shadertoy.cpp  shadertoy.tm  shadertoy_mathematica.cpp  shadertoy_octave.cpp  wrapper.cpp  wrapper.hpp
cmake/: FindOctave.cmake
debian/: .gitignore  changelog  control  copyright  rules  shadertoy-connector-mathematica.dirs  shadertoy-connector-mathematica.install  shadertoy-connector-octave.install  shlibs.local
debian/source/: options
docs/: EXAMPLES.md  FUNCTIONS.md  INSTALL.md  README.md
include/: api.hpp  basic_context.hpp  basic_host.hpp  context.hpp  getpid.h  gl_host.hpp  host.hpp  host_host.hpp  image.hpp  local.hpp  net_host.hpp  net_io.hpp  remote.hpp  server.hpp
include/stc/: api.hpp  host_manager.hpp
include/stc/client/: net_host.hpp
include/stc/core/: basic_context.hpp  basic_host.hpp  image.hpp
include/stc/gl/: context.hpp  host.hpp  local.hpp  remote.hpp
include/stc/net/: io.hpp
include/stc/server/: host_server.hpp
modules/: FindEpoxy.cmake  FindGLFW3.cmake  Findjsoncpp.cmake
src/: api.cpp  basic_context.cpp  basic_host.cpp  context.cpp  gl_host.cpp  host.cpp  host_host.cpp  host_manager.cpp  image.cpp  local.cpp  net_host.cpp  net_io.cpp  remote.cpp  server.cpp  shadertoy_mathematica.cpp  shadertoy_octave.cpp  shadertoy_test.cpp
src/cli/: CMakeLists.txt  client.cpp  server.cpp
src/client/: CMakeLists.txt  net_host.cpp
src/core/: CMakeLists.txt  basic_context.cpp  basic_host.cpp  image.cpp
src/gl/: CMakeLists.txt  context.cpp  host.cpp  local.cpp  remote.cpp
src/mathematica/: Shadertoy.m  Shadertoy.tm  shadertoy.tm
src/mathematica/Kernel/: init.m
src/net/: CMakeLists.txt  io.cpp
src/server/: CMakeLists.txt  host_server.cpp  main.cpp
t/: 00_load.sh  10_basic.t  20_formats.t  30_set_input.t  40_set_input_filter.t  50_local_multibuf.t  StHelpers.pm  helpers.sh  octave_tap.m
